objects/LineItem__c.object
<CustomObject>
    <fields>
        <fullName>InvoiceStatement__c</fullName>
        <label>InvoiceStatement</label>
        <referenceTo>Invoice_Statement__c</referenceTo>
        <relationshipLabel>LineItems</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Merchandise__c</fullName>
        <label>Merchandise</label>
        <referenceTo>Merchandise__c</referenceTo>
        <relationshipLabel>LineItems</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>UnitPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitsSold__c</fullName>
        <label>UnitsSold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>value1__c</fullName>
        <formula>UnitPrice__c  *  UnitsSold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>value1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>value__c</fullName>
        <formula>UnitPrice__c  *  UnitsSold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>LineItem</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>InvoiceStatement__c</columns>
        <columns>Merchandise__c</columns>
        <columns>UnitPrice__c</columns>
        <columns>UnitsSold__c</columns>
        <columns>value__c</columns>
        <columns>value1__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>LineItem Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>OrderinStock</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
ISNEW(), Merchandise__r.TotalInventory__c 
&lt;  UnitsSold__c ,
IF ( UnitsSold__c &lt; PRIORVALUE( UnitsSold__c ),
FALSE, Merchandise__r.TotalInventory__c 
 &lt;  UnitsSold__c  - PRIORVALUE(UnitsSold__c))
)</errorConditionFormula>
        <errorDisplayField>UnitsSold__c</errorDisplayField>
        <errorMessage>You have ordered more items than we have in stock.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OrderinStock1</fullName>
        <active>true</active>
        <errorConditionFormula>Merchandise__r.TotalInventory__c &lt;UnitsSold__c</errorConditionFormula>
        <errorDisplayField>UnitsSold__c</errorDisplayField>
        <errorMessage>You have ordered more items than we have in stock</errorMessage>
    </validationRules>
</CustomObject>